# inference_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
example/: CMakeLists.txt  Makefile  imagenet_vgg19.cpp  mnist_mlp.cpp
inference_engine/: CMakeLists.txt  Makefile  backend.hpp  image_util.cpp  image_util.hpp  inferer.cpp  inferer.hpp  naive_backend.cpp  onnx.cpp  onnx.hpp
test/: CMakeLists.txt  Makefile  test_image_util.cpp  test_naive_backend.cpp  util.cpp  util.hpp
